--- a/cart_info.html
+++ b/cart_info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>product informations</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/cart_info.css">
+    <link rel="stylesheet" href="cart_info.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
         rel='stylesheet'>
 </head>
@@ -84,28 +84,28 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="image_swiper/img-1.jpg" alt="Product Image 1">
+                <img src="./image_swiper/img-1.jpg" alt="Product Image 1">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-2.jpg" alt="Product Image 2">
+                <img src="./image_swiper/img-2.jpg" alt="Product Image 2">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-3.jpg" alt="Product Image 3">
+                <img src="./image_swiper/img-3.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-4.jpg" alt="Product Image 3">
+                <img src="./image_swiper/img-4.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-5.jpg" alt="Product Image 3">
+                <img src="./image_swiper/img-5.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-6.jpg" alt="Product Image 3">
+                <img src="./image_swiper/img-6.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-7.jpg" alt="Product Image 3">
+                <img src="./image_swiper/img-7.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="image_swiper/img-8.jpg" alt="Product Image 3">
+                <img src="./image_swiper/img-8.jpg" alt="Product Image 3">
             </div>
         </div>
         <button class="btn btn-prev">&#10094;</button>
@@ -153,7 +153,7 @@
     <h2>Client Reviws</h2>
     <div class="reviw">
         <div class="client">
-            <img src="image_swiper/img-1.jpg" alt="Client Image">
+            <img src="./image_swiper/img-1.jpg" alt="Client Image">
             <h4>John Doe</h4>
         </div>
         <div class="reviw-text">
@@ -168,7 +168,7 @@
 
     <div class="reviw">
         <div class="client">
-            <img src="image_swiper/img-2.jpg" alt="Client Image">
+            <img src="./image_swiper/img-2.jpg" alt="Client Image">
             <h4>John Doe</h4>
         </div>
         <div class="reviw-text">
@@ -183,7 +183,7 @@
 
     <div class="reviw">
         <div class="client">
-            <img src="image_swiper/img-3.jpg" alt="Client Image">
+            <img src="./image_swiper/img-3.jpg" alt="Client Image">
             <h4>John Doe</h4>
         </div>
         <div class="reviw-text">
@@ -265,5 +265,5 @@
 
 
 </body>
-<script src="/app.js"></script>
+<script src="app.js"></script>
 </html>
