--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="continaire">
     <header class="navigation">
         <nav>
-        <div class="logo"><a href="/index.html"><img src="pngegg.png" alt="nike-logo"></a></div>
+        <div class="logo"><a href="index.html"><img src="pngegg.png" alt="nike-logo"></a></div>
         <div class="links">
             <ul>
                 <li><a href="#">New Reales</a></li>
