--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Custemise</a></li>
             </ul>
         </div>
-        <button class="Shop-Now"><a href="/cart_info.html">Shop Now</a></button>
+        <button class="Shop-Now"><a href="cart_info.html">Shop Now</a></button>
         <div class="responsive-links">
             <i class='bx bx-list-ul'></i>
         </div>
