--- a/cart_info.html
+++ b/cart_info.html
@@ -84,7 +84,7 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="img-1.jpg" alt="Product Image 1">
+                <img src="/img-1.jpg" alt="Product Image 1">
             </div>
             <div class="swiper-slide">
                 <img src="img-2.jpg" alt="Product Image 2">
