--- a/cart_info.html
+++ b/cart_info.html
@@ -82,27 +82,30 @@
 <section class="product-info">
 
     <div class="swiper-container">
-        
+        <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="img-2.jpg" alt="Product Image 2">
+                <img src="image_swiper/img-1.jpg" alt="Product Image 1">
             </div>
             <div class="swiper-slide">
-                <img src="img-3.jpg" alt="Product Image 3">
+                <img src="image_swiper/img-2.jpg" alt="Product Image 2">
             </div>
             <div class="swiper-slide">
-                <img src="img-4.jpg" alt="Product Image 3">
+                <img src="image_swiper/img-3.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="img-5.jpg" alt="Product Image 3">
+                <img src="image_swiper/img-4.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="img-6.jpg" alt="Product Image 3">
+                <img src="image_swiper/img-5.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="img-7.jpg" alt="Product Image 3">
+                <img src="image_swiper/img-6.jpg" alt="Product Image 3">
             </div>
             <div class="swiper-slide">
-                <img src="img-8.jpg" alt="Product Image 3">
+                <img src="image_swiper/img-7.jpg" alt="Product Image 3">
+            </div>
+            <div class="swiper-slide">
+                <img src="image_swiper/img-8.jpg" alt="Product Image 3">
             </div>
         </div>
         <button class="btn btn-prev">&#10094;</button>
